<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

<parent>
		<groupId>com.impetus.kundera</groupId>
		<artifactId>kundera-benchmark</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<groupId>com.impetus.kundera.ycsb</groupId>
	<artifactId>kundera-ycsb</artifactId>
	<packaging>jar</packaging>
	<version>1.0.0</version>

	<name>ycsb</name>
	<url>https://github.com/impetus-opensource/Kundera</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<kundera.version>3.7</kundera.version>
	</properties>

	<dependencies>

<!-- 		<dependency> -->
<!-- 		<groupId>com.yahoo.ycsb</groupId> -->
<!-- 		<artifactId>core</artifactId> -->
<!-- 		<version>0.1.4</version> -->
<!-- 		<exclusions> -->
<!-- 		<exclusion> -->
<!-- 		<groupId>com.google.collections</groupId> -->
<!-- 		<artifactId>google-collections</artifactId> -->
<!-- 		</exclusion> -->
<!-- 		</exclusions> -->
<!-- 		</dependency> -->

		<dependency>
			<groupId>com.yahoo.ycsb</groupId>
			<artifactId>core</artifactId>
			<version>0.1.4</version>
			<scope>system</scope>
			<systemPath>/home/IMPETUS/devender.yadav/core-0.1.4.jar</systemPath>
			<exclusions>
				<exclusion>
					<groupId>com.google.collections</groupId>
					<artifactId>google-collections</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.apache.phoenix</groupId>
			<artifactId>phoenix-core</artifactId>
			<version>4.5.0-HBase-1.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpcore</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>net.sourceforge.jexcelapi</groupId>
			<artifactId>jxl</artifactId>
			<version>2.6.3</version>
		</dependency>

		<!-- for mail -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>3.0.5.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4</version>
		</dependency>

		<!-- kundera dependencies -->

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-kudu</artifactId>
			<version>${kundera.version}</version>
		</dependency>

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-hbase-v2</artifactId>
			<version>${kundera.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpcore</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-cassandra</artifactId>
			<version>${kundera.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.impetus.kundera.client</groupId>
					<artifactId>kundera-elastic-search</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-rdbms</artifactId>
			<version>${kundera.version}</version>
		</dependency>

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-redis</artifactId>
			<version>${kundera.version}</version>
		</dependency>

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-neo4j</artifactId>
			<version>${kundera.version}</version>
		</dependency>

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-mongo</artifactId>
			<version>${kundera.version}</version>
		</dependency>
		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-cassandra-pelops</artifactId>
			<version>${kundera.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>16.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-oracle-nosql</artifactId>
			<version>${kundera.version}</version>
		</dependency>

		<dependency>
			<groupId>com.impetus.kundera.client</groupId>
			<artifactId>kundera-couchdb</artifactId>
			<version>${kundera.version}</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.hibernate</groupId> -->
		<!-- <artifactId>hibernate-entitymanager</artifactId> -->
		<!-- <version>4.1.7.Final</version> -->
		<!-- </dependency> -->


		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<!-- apache commons -->
		<!-- <dependency> -->
		<!-- <groupId>commons-configuration</groupId> -->
		<!-- <artifactId>commons-configuration</artifactId> -->
		<!-- <version>1.9</version> -->
		<!-- </dependency> -->



		<!-- hector dependency -->
		<dependency>
			<groupId>me.prettyprint</groupId>
			<artifactId>hector-core</artifactId>
			<version>1.0-5</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.cassandra</groupId>
					<artifactId>cassandra-thrift</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- redis client -->
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>2.6.0</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>

				</configuration>
			</plugin>
			
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<id>job-driver-jar</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<!-- <shadedArtifactAttached>true</shadedArtifactAttached> -->
							<!-- <shadedClassifierName>driver</shadedClassifierName> -->
							<finalName>${project.artifactId}-${project.version}</finalName>

							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<!-- Some care is required: http://doc.akka.io/docs/akka/snapshot/general/configuration.html -->
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
									<resource>reference.conf</resource>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>foo.bar.SparkJobs</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			

			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
				<version>2.9</version> <configuration> <argLine>-Xms512M -Xmx2048M -XX:+UseConcMarkSweepGC 
				-XX:+UseParNewGC</argLine> </configuration> </plugin> -->
		</plugins>
	</build>

</project>
